Removed about page which was blank and fixed alignment of content on home page so that it is centered.

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -9,8 +9,13 @@ Grid
   flex-direction: row;
   flex-wrap: wrap;
   /* defaults to 'flex-start' */
-  justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
 
 .grid-col {
